update print media

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="indexHeader">
         <h1 class="mainTitle">SimpleSatiety^</h1>
     </header>
 
